fix issue#3, component-font-size related font size problem on small screen

--- a/_vanilla/less/src/fonts.less
+++ b/_vanilla/less/src/fonts.less
@@ -50,7 +50,7 @@ body {
     line-height: @component-title-line-height;
 
     @media all and (max-width: @device-width-small) {
-        font-size: (@component-title-font-size - 10px);
+        font-size: (@component-title-font-size - 3px);
     }
 }
 
@@ -60,7 +60,7 @@ body {
     line-height: @component-title-line-height;
 
     @media all and (max-width: @device-width-small) {
-        font-size: (@component-title-font-size - 10px);
+        font-size: (@component-title-font-size - 3px);
     }
 }
 
@@ -69,9 +69,9 @@ body {
     font-weight: @component-title-font-weight;
     line-height: @component-title-line-height;
 
-    @media all and (max-width: @device-width-small) {
-        font-size: (@component-title-font-size - 10px);
-    }
+    // @media all and (max-width: @device-width-small) {
+    //     font-size: (@component-title-font-size - 3px);
+    // }
 }
 
 .item-title {
@@ -80,7 +80,7 @@ body {
     line-height: @item-title-line-height;
 
     @media all and (max-width: @device-width-small) {
-        font-size: (@component-title-font-size - 15px);
+        font-size: (@component-title-font-size - 3px);
     }
 }
 
@@ -90,7 +90,7 @@ body {
     line-height: @sub-title-line-height;
 
     @media all and (max-width: @device-width-small) {
-        font-size: (@component-title-font-size - 10px);
+        font-size: (@component-title-font-size - 3px);
     }
 }
 
@@ -106,7 +106,7 @@ body {
     line-height: @component-title-line-height;
 
     @media all and (max-width: @device-width-small) {
-        font-size: (@component-title-font-size - 10px);
+        font-size: (@component-title-font-size - 3px);
     }
 }
 
